# sky-habbits

./: .template.env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apps/habbits/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/habbits/management/commands/: createintervals.py
apps/habbits/migrations/: 0001_initial.py  0002_alter_habbit_reward_habbit.py  0003_alter_habbit_options_habbit_name_and_more.py
apps/users/: authentication.py  serializers.py  tests.py  urls.py  views.py
apps/widgets/: serializers.py  urls.py  views.py
apps/widgets/templates/widgets/: telegram-widget-preview.html  telegram-widget.html
apps/widgets/templatetags/: settings.py
config/: celery.py  settings.py  swagger.py  urls.py
